<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.saphyra</groupId>
    <artifactId>apphub</artifactId>
    <version>1.0-SNAPSHOT</version>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.14</version>
        <relativePath/>
    </parent>

    <name>apphub-parent</name>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>25</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>

        <!-- Platform Versions -->
        <versions.spring-boot>3.5.14</versions.spring-boot>
        <versions.spring-cloud-gateway>4.3.2</versions.spring-cloud-gateway>
        <versions.spring-cloud>4.3.0</versions.spring-cloud>
        <versions.liquibase-core>5.0.1</versions.liquibase-core>
        <versions.postgresql-connector>42.7.8</versions.postgresql-connector>
        <versions.exec-maven-plugin>3.6.2</versions.exec-maven-plugin>

        <!-- Lib Versions -->
        <versions.apache-commons.commons-io>2.20.0</versions.apache-commons.commons-io>
        <versions.apache-commons.commons-lang3>3.19.0</versions.apache-commons.commons-lang3>
        <versions.apache-commons.commons-net>3.12.0</versions.apache-commons.commons-net>
        <versions.assertj-core>3.27.6</versions.assertj-core>
        <versions.h2>2.4.240</versions.h2>
        <versions.junit>6.0.0</versions.junit>
        <versions.maven-surefire-plugin>3.5.4</versions.maven-surefire-plugin>
        <versions.mockito>5.20.0</versions.mockito>
        <versions.byte-buddy>1.17.8</versions.byte-buddy>
        <versions.rest-assured>5.5.6</versions.rest-assured>
        <versions.thymeleaf-spring>3.1.3.RELEASE</versions.thymeleaf-spring>
        <versions.logback>1.5.32</versions.logback>
        <versions.tomcat-util>10.0.13</versions.tomcat-util>
        <versions.guava>33.5.0-jre</versions.guava>
        <versions.openfeign>13.6</versions.openfeign>
        <versions.gson>2.13.2</versions.gson>
        <versions.java-websocket>1.6.0</versions.java-websocket>
        <versions.apache-commons-pool>2.12.1</versions.apache-commons-pool>
        <versions.jakarta-validation-api>3.1.1</versions.jakarta-validation-api>
        <versions.jakarta-servlet-api>6.1.0</versions.jakarta-servlet-api>
        <versions.awaitility>4.3.0</versions.awaitility>
        <versions.jackson-annotations>2.20</versions.jackson-annotations>
        <versions.jackson-core>2.20.1</versions.jackson-core>
        <versions.jackson-databind>3.0.1</versions.jackson-databind>
        <versions.commons-net>3.12.0</versions.commons-net>
        <versions.jsonwebetoken>0.13.0</versions.jsonwebetoken>

        <!-- AWS -->
        <versions.dynamodb>2.44.0</versions.dynamodb>
        <versions.s3>2.42.41</versions.s3>

        <!-- Plugin Versions -->
        <versions.maven-compiler-plugin>3.14.1</versions.maven-compiler-plugin>
        <versions.lombok>1.18.42</versions.lombok>
        <versions.lombok-maven>1.18.20.0</versions.lombok-maven>
        <versions.logback-contrib>0.1.5</versions.logback-contrib>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${versions.lombok}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-maven</artifactId>
            <version>${versions.lombok-maven}</version>
            <type>pom</type>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${versions.logback}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback.contrib</groupId>
            <artifactId>logback-json-classic</artifactId>
            <version>${versions.logback-contrib}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback.contrib</groupId>
            <artifactId>logback-jackson</artifactId>
            <version>${versions.logback-contrib}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${versions.apache-commons.commons-lang3}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>apphub-service</module>
        <module>apphub-api</module>
        <module>apphub-lib</module>
    </modules>
</project>